k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend--VERSION-
  labels:
    app: frontend
    version: -VERSION-
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: -VERSION-
  template:
    metadata:
      labels:
        app: frontend
        version: -VERSION-
    spec:
      containers:
        - name: ui
          image: -IMAGEHASH-
          imagePullPolicy: Always
